Remove package prefix from model names
