# validatorcomponents/api/model/response/has_tx_failed_response.go
@@ -2,4 +2,4 @@ package response
 
 type HasTxFailedResponse struct {
 	Failed bool `json:"failed"`
-}
+} //@name HasTxFailedResponse
